Moved jwt authentication to cookies and adjusted a litlle bit of frontend
